--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/cpp-jwt"]
 	path = external/cpp-jwt
 	url = https://github.com/arun11299/cpp-jwt
+[submodule "external/cppzmq"]
+	path = external/cppzmq
+	url = https://github.com/zeromq/cppzmq
