--- a/account_process_delegator/CMakeLists.txt
+++ b/account_process_delegator/CMakeLists.txt
@@ -1,12 +1,31 @@
-# CommonLib
+# AccountMonitor
 # Copyright (C) 2023 Joshua and Jordan Ogunyinka
 
 cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 
 # Project
 get_filename_component(PROJECT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" ABSOLUTE)
+set(PROJECT_NAME account_process_delegator)
 
-set(PROJECT_NAME common)
+## load in pkg-config support
+find_package(PkgConfig)
+## use pkg-config to get hints for 0mq locations
+pkg_check_modules(PC_ZeroMQ QUIET zmq)
+
+## use the hint from above to find where 'zmq.hpp' is located
+find_path(ZeroMQ_INCLUDE_DIR
+        NAMES zmq.hpp
+        PATHS ${PC_ZeroMQ_INCLUDE_DIRS}
+)
+
+## use the hint from above to find the location of libzmq
+find_library(ZeroMQ_LIBRARY
+        NAMES zmq
+        PATHS ${PC_ZeroMQ_LIBRARY_DIRS}
+)
+
+#find cppzmq wrapper, installed by make of cppzmq
+find_package(cppzmq)
 
 find_package(Boost REQUIRED)
 if(NOT Boost_FOUND)
@@ -24,6 +43,7 @@ find_package(OpenSSL REQUIRED)
 if(NOT OPENSSL_FOUND)
   message(FATAL_ERROR "You need to have OpenSSL installed (e.g. libssl-dev)")
 else()
+  message("OpenSSL libraries: ${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY}")
   include_directories(${OPENSSL_INCLUDE_DIR})
   link_libraries(${OPENSSL_SSL_LIBRARY} ${OPENSSL_CRYPTO_LIBRARY})
 endif()
@@ -33,23 +53,23 @@ if (ENABLE_MSGPACK_USAGE)
 endif ()
 
 include_directories(${PROJECT_DIR}/include)
+include_directories(${PROJECT_DIR}/../common/include)
+include_directories(${PROJECT_DIR}/../external/cpp-jwt/include)
 include_directories(${PROJECT_DIR}/../external)
 include_directories(${PROJECT_DIR}/../external/spdlog/include)
+include_directories(${ZeroMQ_INCLUDE_DIR})
 
 if(WIN32)
   # set stuff for windows
 else()
   # set stuff for other systems
   link_directories(/usr/lib)
-  link_libraries(stdc++fs pthread ssl crypto)
-  if (ENABLE_MSGPACK_USAGE)
-      link_libraries(msgpack-cxx)
-  endif ()
+  link_libraries(stdc++fs pthread odbc)
 endif()
 
 # Outputs
-set(OUTPUT_DEBUG ${PROJECT_DIR}/lib)
-set(OUTPUT_RELEASE ${PROJECT_DIR}/lib)
+set(OUTPUT_DEBUG ${PROJECT_DIR}/bin)
+set(OUTPUT_RELEASE ${PROJECT_DIR}/bin)
 
 project(${PROJECT_NAME} CXX)
 
@@ -84,37 +104,35 @@ message("${PROJECT_NAME}: CURR BIN DIR: ${CMAKE_CURRENT_BINARY_DIR}")
 
 # Source Files
 set(SRC_FILES
-        src/crypto_utils.cpp
-        src/file_utils.cpp
-        src/https_rest_api.cpp
-        src/json_utils.cpp
-        src/random_utils.cpp
-        src/string_utils.cpp
-        src/uri.cpp)
+        main.cpp
+        src/database_connector.cpp
+        src/server.cpp
+        src/session.cpp
+        src/accounts_watcher.cpp)
 
 source_group("Sources" FILES ${SRC_FILES})
 
 # Header Files
 set(HEADERS_FILES
-        include/container.hpp
-        include/crypto_utils.hpp
-        include/enumerations.hpp
-        include/fields_alloc.hpp
-        include/file_utils.hpp
-        include/https_rest_api.hpp
-        include/json_utils.hpp
-        include/random_utils.hpp
-        include/string_utils.hpp
-        include/uri.hpp
-        include/account_stream/okex_order_info.hpp
-        include/account_stream/binance_order_info.hpp
-        include/price_stream/commodity.hpp)
+        include/db_config.hpp
+        include/database_connector.hpp
+        include/server.hpp
+        include/session.hpp
+        include/cli.hpp
+        include/user_info.hpp
+)
 
 source_group("Headers" FILES ${HEADERS_FILES})
 
 # Add executable to build.
-add_library(${PROJECT_NAME} STATIC ${SRC_FILES} ${HEADERS_FILES})
+add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADERS_FILES}
+        src/price_watcher.cpp)
 
+if (ENABLE_MSGPACK_USAGE)
+  target_link_libraries(${PROJECT_NAME} common cppzmq msgpack-cxx)
+else ()
+  target_link_libraries(${PROJECT_NAME} common cppzmq)
+endif ()
 if(NOT MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++17 -O3")
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
@@ -141,6 +159,6 @@ if(CMAKE_BUILD_TYPE STREQUAL "Release")
    -D_CONSOLE 
     )
     if(MSVC)
-        target_compile_options(${PROJECT_NAME} PRIVATE  /W3 /GL /Gy /Zi /EHsc /std:c++17)
+        target_compile_options(${PROJECT_NAME} PRIVATE  /W3 /GL /Oi /Gy /Zi /EHsc /std:c++17)
     endif()
 endif()
