Add new API and fixed bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ endif()
 option(ENABLE_USER_ACCT_MONITOR      "Compile AccountMonitor" on)
 option(ENABLE_COMMON_LIB             "Compile CommonLib" on)
 option(ENABLE_PRICE_MONITOR          "Compile Crypto price monitor" on)
+option(ENABLE_MESSAGE_DELEGATOR      "Compile message delegator" on)
 option(ENABLE_USER_PROCESS_DELEGATOR "Compile user account process delegator" on)
 option(ENABLE_BACKEND_DATABASE       "Enable non-sqlite database support" on)
 option(ENABLE_MSGPACK_USAGE          "Compile the library with MSGPACK" on)
@@ -177,4 +178,6 @@ if (ENABLE_USER_PROCESS_DELEGATOR)
   add_subdirectory(account_process_delegator)
 endif()
 
-
+if (ENABLE_MESSAGE_DELEGATOR)
+  add_subdirectory(message_delegator)
+endif()
