Added message delegator that receives task results and send to another process

--- a/docker/files/supervisord.conf
+++ b/docker/files/supervisord.conf
@@ -30,6 +30,15 @@ stdout_logfile=/run_crypto/log/process_delegator/stdout
 stderr_logfile=/run_crypto/log/process_delegator/stderr
 ; the end
 
+[program:message_delegator]
+command=/crypto/bin/message_delegator
+directory=/crypto/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/message_delegator/stdout
+stderr_logfile=/run_crypto/log/message_delegator/stderr
+; the end
 
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
