--- a/docker/files/supervisord.conf
+++ b/docker/files/supervisord.conf
@@ -1,13 +1,13 @@
 ; Sample supervisor config file.
 
-[program:price_monitor]
-command=/crypto/bin/price_monitor
-directory=/crypto/bin/
+[program:server_message]
+command=python3 /run_crypto/message_server.py
+directory=/run_crypto/
 user=root
 autostart=true
 autorestart=true
-stdout_logfile=/run_crypto/log/price_monitor/stdout
-stderr_logfile=/run_crypto/log/price_monitor/stderr
+stdout_logfile=/run_crypto/log/server_message/stdout
+stderr_logfile=/run_crypto/log/server_message/stderr
 ; the end
 
 [program:account_monitor]
@@ -20,14 +20,14 @@ stdout_logfile=/run_crypto/log/account_monitor/stdout
 stderr_logfile=/run_crypto/log/account_monitor/stderr
 ; the end
 
-[program:process_delegator]
-command=/crypto/bin/account_process_delegator
+[program:price_monitor]
+command=/crypto/bin/price_monitor
 directory=/crypto/bin/
 user=root
 autostart=true
 autorestart=true
-stdout_logfile=/run_crypto/log/process_delegator/stdout
-stderr_logfile=/run_crypto/log/process_delegator/stderr
+stdout_logfile=/run_crypto/log/price_monitor/stdout
+stderr_logfile=/run_crypto/log/price_monitor/stderr
 ; the end
 
 [program:message_delegator]
@@ -38,6 +38,16 @@ autostart=true
 autorestart=true
 stdout_logfile=/run_crypto/log/message_delegator/stdout
 stderr_logfile=/run_crypto/log/message_delegator/stderr
+; the end
+
+[program:process_delegator]
+command=/crypto/bin/process_delegator
+directory=/crypto/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/process_delegator/stdout
+stderr_logfile=/run_crypto/log/process_delegator/stderr
 ; the end
 
 [unix_http_server]
