Add support for using dbus between processes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,51 @@
 # CryptoLog
-# Copyright (C) 2023 Joshua & Jordan Ogunyinka
+# Copyright (C) 2023-2024 Joshua & Jordan Ogunyinka
 
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.6)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF) # We use -std=c++17 instead of -std=gnu++17 in macOS
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+set(SDBUS_CPP_XML_GEN "/usr/local/bin/sdbus-c++-xml2cpp")
+set(SDBUS_CXXXML_GEN_PATH "")
+
+if (NOT EXISTS "${SDBUS_CPP_XML_GEN}")
+  if (EXISTS "/usr/bin/sdbus-c++-xml2cpp")
+    set(SDBUS_CXXXML_GEN_PATH "/usr/bin/sdbus-c++-xml2cpp")
+  endif ()
+else ()
+  set(SDBUS_CXXXML_GEN_PATH "${SDBUS_CPP_XML_GEN}")
+endif ()
+
+if (NOT "${SDBUS_CXXXML_GEN_PATH}" STREQUAL "")
+  set(COMMON_DBUS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/common/dbus")
+  add_custom_command(
+    OUTPUT ${COMMON_DBUS_PATH}/include/time_proxy_client.hpp
+          ${COMMON_DBUS_PATH}/include/time_adaptor_server.hpp
+    COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
+          --proxy=${COMMON_DBUS_PATH}/include/time_proxy_client.hpp
+          --adaptor=${COMMON_DBUS_PATH}/include/time_adaptor_server.hpp
+          ${COMMON_DBUS_PATH}/xml/time_dbus_interfaces.xml
+    DEPENDS ${COMMON_DBUS_PATH}/xml/time_dbus_interfaces.xml
+    VERBATIM)
+
+  add_custom_command(
+          OUTPUT ${COMMON_DBUS_PATH}/include/progress_proxy_client.hpp
+          ${COMMON_DBUS_PATH}/include/progress_adaptor_server.hpp
+          COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
+          --proxy=${COMMON_DBUS_PATH}/include/progress_proxy_client.hpp
+          --adaptor=${COMMON_DBUS_PATH}/include/progress_adaptor_server.hpp
+          ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
+          DEPENDS ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
+          VERBATIM)
+
+  add_custom_target(DbusGeneration ALL
+          DEPENDS common/dbus/include/time_proxy_client.hpp
+          common/dbus/include/time_adaptor_server.hpp
+          common/dbus/include/progress_adaptor_server.hpp
+          common/dbus/include/progress_proxy_client.hpp)
+endif ()
 
 if(COMMAND cmake_policy)
   # CMP0003: Libraries linked via full path no longer produce linker search paths.
@@ -32,6 +71,7 @@ if(NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/external/spdlog/CMakeLists.txt)
   message(FATAL_ERROR "Your cryptolog repository is incomplete, initialize submodules using:\n  git submodule update --init --recursive")
 endif()
 
+find_package(sdbus-c++ REQUIRED)
 find_package(Boost REQUIRED)
 if(NOT Boost_FOUND)
   message(FATAL_ERROR "You need to have Boost installed")
@@ -67,10 +107,13 @@ endif()
 option(ENABLE_USER_ACCT_MONITOR      "Compile AccountMonitor" on)
 option(ENABLE_COMMON_LIB             "Compile CommonLib" on)
 option(ENABLE_PRICE_MONITOR          "Compile Crypto price monitor" on)
-option(ENABLE_MESSAGE_DELEGATOR      "Compile message delegator" on)
-option(ENABLE_USER_PROCESS_DELEGATOR "Compile user account process delegator" on)
+option(ENABLE_PRICE_MSG_DELEGATOR    "Compile price message delegator" on)
+option(ENABLE_ACCOUNT_DISSEMINATOR   "Compile account disseminator" on)
+option(ENABLE_HTTP_STREAM            "Compile http interface for interaction" on)
 option(ENABLE_BACKEND_DATABASE       "Enable non-sqlite database support" on)
 option(ENABLE_MSGPACK_USAGE          "Compile the library with MSGPACK" on)
+option(ENABLE_TIME_TASKS             "Compile the library with the time tasks" on)
+option(ENABLE_PROGRESS_TASKS         "Compile the library with the progress tasks" on)
 
 ######################################################################
 # Profile build type
@@ -174,10 +217,22 @@ if (ENABLE_PRICE_MONITOR)
   add_subdirectory(price_monitor)
 endif()
 
-if (ENABLE_USER_PROCESS_DELEGATOR)
-  add_subdirectory(process_delegator)
+if (ENABLE_HTTP_STREAM)
+  add_subdirectory(http_stream)
 endif()
 
-if (ENABLE_MESSAGE_DELEGATOR)
-  add_subdirectory(message_delegator)
+if (ENABLE_PRICE_MSG_DELEGATOR)
+  add_subdirectory(price_message_delegator)
 endif()
+
+if (ENABLE_ACCOUNT_DISSEMINATOR)
+  add_subdirectory(account_tasks)
+endif()
+
+if (ENABLE_TIME_TASKS)
+  add_subdirectory(time_tasks)
+endif ()
+
+if (ENABLE_PROGRESS_TASKS)
+  add_subdirectory(progress_tasks)
+endif ()
