--- a/docker/files/supervisord.conf
+++ b/docker/files/supervisord.conf
@@ -1,18 +1,28 @@
 ; Sample supervisor config file.
 
-[program:server_message]
-command=python3 /run_crypto/message_server.py
-directory=/run_crypto/
+[program:progress_tasks]
+command=/crypto/x86-build/bin/progress_tasks
+directory=/crypto/x86-build/bin/
 user=root
 autostart=true
 autorestart=true
-stdout_logfile=/run_crypto/log/server_message/stdout
-stderr_logfile=/run_crypto/log/server_message/stderr
+stdout_logfile=/run_crypto/log/progress_tasks/stdout
+stderr_logfile=/run_crypto/log/progress_tasks/stderr
+; the end
+
+[program:time_tasks]
+command=/crypto/x86-build/bin/time_tasks
+directory=/crypto/x86-build/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/time_tasks/stdout
+stderr_logfile=/run_crypto/log/time_tasks/stderr
 ; the end
 
 [program:account_monitor]
-command=/crypto/bin/account_monitor
-directory=/crypto/bin/
+command=/crypto/x86-build/bin/account_monitor
+directory=/crypto/x86-build/bin/
 user=root
 autostart=true
 autorestart=true
@@ -20,34 +30,44 @@ stdout_logfile=/run_crypto/log/account_monitor/stdout
 stderr_logfile=/run_crypto/log/account_monitor/stderr
 ; the end
 
+[program:account_tasks]
+command=/crypto/x86-build/bin/account_tasks
+directory=/crypto/x86-build/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/account_tasks/stdout
+stderr_logfile=/run_crypto/log/account_tasks/stderr
+; the end
+
+[program:http_stream]
+command=/crypto/x86-build/bin/http_stream
+directory=/crypto/x86-build/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/http_stream/stdout
+stderr_logfile=/run_crypto/log/http_stream/stderr
+; the end
+
+[program:price_message_delegator]
+command=/crypto/x86-build/bin/price_message_delegator
+directory=/crypto/x86-build/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/price_message_delegator/stdout
+stderr_logfile=/run_crypto/log/price_message_delegator/stderr
+; the end
+
 [program:price_monitor]
-command=/crypto/bin/price_monitor
-directory=/crypto/bin/
+command=/crypto/x86-build/bin/price_monitor
+directory=/crypto/x86-build/bin/
 user=root
 autostart=true
 autorestart=true
 stdout_logfile=/run_crypto/log/price_monitor/stdout
 stderr_logfile=/run_crypto/log/price_monitor/stderr
-; the end
-
-[program:message_delegator]
-command=/crypto/bin/message_delegator
-directory=/crypto/bin/
-user=root
-autostart=true
-autorestart=true
-stdout_logfile=/run_crypto/log/message_delegator/stdout
-stderr_logfile=/run_crypto/log/message_delegator/stderr
-; the end
-
-[program:process_delegator]
-command=/crypto/bin/process_delegator
-directory=/crypto/bin/
-user=root
-autostart=true
-autorestart=true
-stdout_logfile=/run_crypto/log/process_delegator/stdout
-stderr_logfile=/run_crypto/log/process_delegator/stderr
 ; the end
 
 [unix_http_server]
