--- a/docker/files/supervisord.conf
+++ b/docker/files/supervisord.conf
@@ -50,14 +50,14 @@ stdout_logfile=/run_crypto/log/http_stream/stdout
 stderr_logfile=/run_crypto/log/http_stream/stderr
 ; the end
 
-[program:price_message_delegator]
-command=/crypto/x86-build/bin/price_message_delegator
+[program:price_result_stream]
+command=/crypto/x86-build/bin/price_result_stream
 directory=/crypto/x86-build/bin/
 user=root
 autostart=true
 autorestart=true
-stdout_logfile=/run_crypto/log/price_message_delegator/stdout
-stderr_logfile=/run_crypto/log/price_message_delegator/stderr
+stdout_logfile=/run_crypto/log/price_result_stream/stdout
+stderr_logfile=/run_crypto/log/price_result_stream/stderr
 ; the end
 
 [program:price_monitor]
