add telegram client to the mix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,16 @@ endif ()
 if (NOT "${SDBUS_CXXXML_GEN_PATH}" STREQUAL "")
   set(COMMON_DBUS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/common/dbus")
   set(COMMON_DBUS_INCLUDE "${COMMON_DBUS_PATH}/base")
+
+  add_custom_command(
+    OUTPUT ${COMMON_DBUS_INCLUDE}/telegram_adaptor_server.hpp
+          ${COMMON_DBUS_INCLUDE}/telegram_proxy_client.hpp
+    COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
+      --adaptor=${COMMON_DBUS_INCLUDE}/telegram_adaptor_server.hpp
+      --proxy=${COMMON_DBUS_INCLUDE}/telegram_proxy_client.hpp
+    ${COMMON_DBUS_PATH}/xml/telegram_dbus_interface.xml
+    DEPENDS ${COMMON_DBUS_PATH}/xml/telegram_dbus_interface.xml
+    VERBATIM)
   add_custom_command(
     OUTPUT ${COMMON_DBUS_INCLUDE}/time_proxy_client.hpp
           ${COMMON_DBUS_INCLUDE}/time_adaptor_server.hpp
@@ -32,32 +42,34 @@ if (NOT "${SDBUS_CXXXML_GEN_PATH}" STREQUAL "")
     VERBATIM)
 
   add_custom_command(
-          OUTPUT ${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
-          ${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
-          COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
-          --proxy=${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
-          --adaptor=${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
-          ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
-          DEPENDS ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
-          VERBATIM)
+    OUTPUT ${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
+    ${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
+    COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
+    --proxy=${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
+    --adaptor=${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
+    ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
+    DEPENDS ${COMMON_DBUS_PATH}/xml/progress_dbus_interfaces.xml
+    VERBATIM)
 
   add_custom_command(
-          OUTPUT ${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
-          ${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
-          COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
-          --proxy=${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
-          --adaptor=${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
-          ${COMMON_DBUS_PATH}/xml/price_result_stream_interface.xml
-          DEPENDS ${COMMON_DBUS_PATH}/xml/price_result_stream_interface.xml
-          VERBATIM)
+    OUTPUT ${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
+    ${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
+    COMMAND ${SDBUS_CXXXML_GEN_PATH} --verbose
+    --proxy=${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
+    --adaptor=${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
+    ${COMMON_DBUS_PATH}/xml/price_result_stream_interface.xml
+    DEPENDS ${COMMON_DBUS_PATH}/xml/price_result_stream_interface.xml
+    VERBATIM)
 
   add_custom_target(DbusGeneration ALL
-          DEPENDS ${COMMON_DBUS_INCLUDE}/time_proxy_client.hpp
-          ${COMMON_DBUS_INCLUDE}/time_adaptor_server.hpp
-          ${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
-          ${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
-          ${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
-          ${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
+    DEPENDS ${COMMON_DBUS_INCLUDE}/time_proxy_client.hpp
+    ${COMMON_DBUS_INCLUDE}/time_adaptor_server.hpp
+    ${COMMON_DBUS_INCLUDE}/progress_adaptor_server.hpp
+    ${COMMON_DBUS_INCLUDE}/progress_proxy_client.hpp
+    ${COMMON_DBUS_INCLUDE}/price_task_result_client.hpp
+    ${COMMON_DBUS_INCLUDE}/price_task_result_server.hpp
+    ${COMMON_DBUS_INCLUDE}/telegram_adaptor_server.hpp
+    ${COMMON_DBUS_INCLUDE}/telegram_proxy_client.hpp
   )
 endif ()
 
@@ -90,8 +102,8 @@ find_package(Boost REQUIRED)
 if(NOT Boost_FOUND)
   message(FATAL_ERROR "You need to have Boost installed")
 else()
-  set(Boost_USE_STATIC_LIBS OFF) 
-  set(Boost_USE_MULTITHREADED ON)  
+  set(Boost_USE_STATIC_LIBS OFF)
+  set(Boost_USE_MULTITHREADED ON)
   set(Boost_USE_STATIC_RUNTIME OFF)
   include_directories(${Boost_INCLUDE_DIRS})
 endif()
@@ -128,6 +140,7 @@ option(ENABLE_BACKEND_DATABASE       "Enable non-sqlite database support" on)
 option(ENABLE_MSGPACK_USAGE          "Compile the library with MSGPACK" on)
 option(ENABLE_TIME_TASKS             "Compile the library with the time tasks" on)
 option(ENABLE_PROGRESS_TASKS         "Compile the library with the progress tasks" on)
+option(ENABLE_TELEGRAM_CLIENT        "Compile with telegram client" on)
 
 ######################################################################
 # Profile build type
@@ -249,4 +262,8 @@ endif ()
 
 if (ENABLE_PROGRESS_TASKS)
   add_subdirectory(progress_tasks)
+endif ()
+
+if(ENABLE_TELEGRAM_CLIENT)
+  add_subdirectory(telegram_client)
 endif ()
