--- a/docker/files/conf/supervisord.conf
+++ b/docker/files/conf/supervisord.conf
@@ -70,6 +70,16 @@ stdout_logfile=/run_crypto/log/price_monitor/stdout
 stderr_logfile=/run_crypto/log/price_monitor/stderr
 ; the end
 
+[program:telegram_messaging]
+command=/crypto/x86-build/bin/telegram_messaging
+directory=/crypto/x86-build/bin/
+user=root
+autostart=true
+autorestart=true
+stdout_logfile=/run_crypto/log/telegram_messaging/stdout
+stderr_logfile=/run_crypto/log/telegram_messaging/stderr
+; the end
+
 [unix_http_server]
 file=/var/run/supervisor.sock   ; (the path to the socket file)
 chmod=0700                       ; sockef file mode (default 0700)
